--- a/hunt/package.json
+++ b/hunt/package.json
@@ -11,17 +11,16 @@
   },
   "dependencies": {
     "react": "16.11.0",
-    "react-native": "0.62.2",
-    "react-navigation": "^4.3.7"
+    "react-native": "0.62.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.0",
-    "@babel/runtime": "^7.9.2",
-    "@react-native-community/eslint-config": "^1.0.0",
-    "babel-jest": "^25.3.0",
-    "eslint": "^6.8.0",
-    "jest": "^25.3.0",
-    "metro-react-native-babel-preset": "^0.59.0",
+    "@babel/core": "^7.6.2",
+    "@babel/runtime": "^7.6.2",
+    "@react-native-community/eslint-config": "^0.0.5",
+    "babel-jest": "^24.9.0",
+    "eslint": "^6.5.1",
+    "jest": "^24.9.0",
+    "metro-react-native-babel-preset": "^0.58.0",
     "react-test-renderer": "16.11.0"
   },
   "jest": {
